--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,11 @@ body {
 h1 {
   font-size: 64px;
   color: white;
+  font-family: "Roboto";
+}
+
+h2 {
+  color: white;
+  font-size: 64px;
   font-family: "Playfair Display";
 }
