--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,12 @@ h4 {
   padding: 5px;
 }
 
+h5 {
+  color: white;
+  font-family: "Playfair display";
+  text-align: center;
+}
+
 .nav-link:hover {
   color: rgb(255, 235, 210);
 }
@@ -92,9 +98,6 @@ h4 {
   text-align: center;
 }
 
-.about-container {
-}
-
 .about-info {
   font-family: "roboto";
   color: white;
@@ -108,4 +111,29 @@ h4 {
   justify-content: center;
   font-family: "Playfair Display";
   text-align: center;
+}
+
+.project-header {
+  margin: 80px;
+  margin-bottom: -20px;
+  text-align: center;
+  font-family: "Playfair Display";
+}
+
+.project-image {
+  border-radius: 10px;
+  border: 2px solid lightgrey;
+  text-align: center;
+  margin: 30px;
+}
+
+.project-link {
+  text-align: center;
+  font-family: "Roboto";
+}
+
+.project-link:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  color: rgb(255, 235, 210);
 }
