--- a/src/style.css
+++ b/src/style.css
@@ -137,3 +137,27 @@ h5 {
   opacity: 0.7;
   color: rgb(255, 235, 210);
 }
+
+.contact-header {
+  margin: 80px;
+  margin-bottom: -20px;
+  text-align: center;
+  font-family: "Playfair Display";
+}
+
+.contact-subheading {
+  text-align: center;
+  font-family: "roboto";
+  font-size: 25px;
+}
+
+.contact-email {
+  text-decoration: none;
+  color: white;
+}
+
+.contact-email:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  color: rgb(255, 235, 210);
+}
