Added footer to all pages

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,14 @@ h5 {
   text-align: center;
 }
 
+footer {
+  font-family: "Roboto";
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  margin: 60px 0;
+}
+
 .nav-link:hover {
   color: rgb(255, 235, 210);
 }
